k8s/argo-app-go-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-app-go-server
  namespace: go-server-ns
  labels:
    app: argo-app-go-server
spec:
  type: LoadBalancer
  selector:
    app: argo-app-go-server
  ports:
  - port: 8090
    targetPort: 8090
