k8s/argo-app-go-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-app-go-server-ing
  namespace: go-server-ns
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
  - host: go-server.lab
    http:
      paths:
      - backend:
          service:
            name: argo-app-go-server
            port:
              number: 8090
        path: /
        pathType: Prefix
